# slackmud2

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  render.yaml  wizards.txt.example
migrations/: 001_initial_schema.sql  002_add_exits.sql  003_add_attached_channel.sql  004_create_areas_table.sql  005_make_exit_created_by_nullable.sql  006_create_objects_table.sql  007_create_object_instances_table.sql  008_add_equipment_slots.sql
src/: main.rs
src/area/: mod.rs  parser.rs  types.rs
src/db/: area.rs  class.rs  exit.rs  mod.rs  object.rs  player.rs  race.rs  room.rs
src/handlers/: attach.rs  char_creation.rs  character.rs  communication.rs  dig.rs  equipment.rs  events.rs  import.rs  item.rs  look.rs  mod.rs  move.rs  social.rs  teleport.rs
src/models/: area.rs  class.rs  equipment.rs  exit.rs  mod.rs  object.rs  player.rs  race.rs  room.rs
src/slack/: client.rs  mod.rs  types.rs
src/social/: mod.rs  parser.rs  types.rs
